--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -20,6 +20,7 @@
     <string name="music_headset_no_contected">Auricolari non rilevati</string>
     <string name="music_headset_calibrate_wrong_key">Questo è il pulsante sbagliato</string>
     <string name="music_hifi_title">Audio Hi-Fi</string>
+    <string name="music_hifi_volume">Volume Hi-Fi</string>
     <string name="music_hifi_summary">Riduce il rumore e la distorsione, migliorando la qualità audio. Questa funzione aumenta il consumo di batteria.</string>
     <string name="music_mi_effect_title">Dirac HD Sound</string>
     <string name="music_mi_effect_summary">Abilita sempre Dirac HD Sound se ascolti tramite altoparlante</string>
@@ -2213,6 +2214,10 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="title_font">Carattere</string>
     <string name="title_font_current">In uso</string>
     <string name="title_layout_current">Seleziona dimensione font</string>
+    <string name="handy_mode">Modalità mano Singola</string>
+    <string name="handy_mode_enable">Modalità mano Singola</string>
+    <string name="handy_mode_tips">Scorri da destra o sinistra partendo dal tasto Home per compattare lo schermo verso uno dei due lati.</string>
+    <string name="handy_mode_size">Dimensione schermo</string>
     <string name="key_settings_title">Tasti</string>
     <string name="key_settings">Tasti</string>
     <string name="screen_key_press">Pressione semplice tasti</string>
@@ -2540,6 +2545,12 @@ ed esegui il software."</string>
     <string name="screen_color_temperature">Temperatura colori</string>
     <string name="screen_saturation">Saturazione colori</string>
     <string name="screen_color_temperature_and_saturation">Temperatura e saturazione colori</string>
+    <string name="screen_effect">Contrasto e colori</string>
+    <string name="screen_optimize">Contrasto</string>
+    <string name="screen_paper_mode_title">Modalità lettura</string>
+    <string name="screen_paper_mode_summary">Riduce la luminosità dello sfondo</string>
+    <string name="screen_paper_mode_turn_on">Attivato</string>
+    <string name="screen_paper_mode_turn_off">Disattivato</string>
     <string name="finish_application">Fine</string>
     <string name="header_category_accounts">Account</string>
     <string name="auto_startup_application_manage">Avvio automatico</string>
@@ -2878,6 +2889,35 @@ Disabilitare le finestre flottanti?"</string>
     <string name="oldman_mode_confirm_title">Riavviare in modalità semplificata? </string>
     <string name="oldman_mode_confirm_will_oldman_mode_text">Il tuo telefono sarà riavviato per entrare in modalità semplificata.</string>
     <string name="oldman_mode_confirm_will_normal_mode_text">Esci dalla modalità semplificata?</string>
+    <string name="location_agps_params_settings_title">Impostazioni AGPS</string>
+    <string name="location_agps_supl_settings">Impostazioni SUPL</string>
+    <string name="location_agps_supl_server_addr">Indirizzo server</string>
+    <string name="location_agps_supl_server_port">Porta server</string>
+    <string name="location_agps_pref_si_title">Modalità preferita</string>
+    <string name="location_agps_si_mode">Modalità AGPS SI</string>
+    <string name="location_agps_si_mode_summary">Scegli la modalità AGPS preferita</string>
+    <string name="location_agps_si_mode_dialog_title">Modalità AGPS</string>
+    <string name="location_agps_pref_apn_title">APN preferito</string>
+    <string name="location_agps_apn_type">Tipologia APN</string>
+    <string name="location_agps_apn_summary">Scegli il tipo di APN preferito</string>
+    <string name="location_agps_apn_choose_dialog_title">Tipologia APN</string>
+    <string name="location_agps_pref_reset_type_title">Tipo di reset preferito</string>
+    <string name="location_agps_reset_type">Tipologia di reset</string>
+    <string name="location_agps_reset_type_summary">Scegli il tipo di reset preferito</string>
+    <string name="location_agps_reset_type_choose_dialog_title">Tipologia di reset</string>
+    <string name="location_agps_pref_network_title">Rete preferita</string>
+    <string name="location_agps_register_network_type">Tipo di accesso alla rete</string>
+    <string name="location_agps_register_network_type_summary">"Scegli la rete per l'utilizzo di AGPS"</string>
+    <string name="location_agps_register_network_type_dialog_title">Scegli la rete</string>
+    <string name="location_agps_roaming_help">"Scegliendo tutte le reti potrebbe aumentare l'utilizzo dei dati durante il roaming. Se superi il tuo limite previsto dal tuo piano, il tuo operatore potrebbe addebitarti costi aggiuntivi."</string>
+    <string name="supl_not_set">Non impostato</string>
+    <string name="location_agps_def_supl_host">221.176.0.55</string>
+    <string name="location_agps_def_supl_port">7275</string>
+    <string name="location_agps_def_network_mode">HOME</string>
+    <string name="location_agps_def_reset_type">HOT</string>
+    <string name="location_agps_def_location_mode">MSB</string>
+    <string name="wifi_disconnected_notification_title">Wi-Fi disconnesso</string>
+    <string name="wifi_disconnected_notification_summary">Non sei connesso al Wi-Fi.</string>
     <string name="miracast_settings_category">Impostazioni display wireless</string>
     <string name="miracast_display_category">Display</string>
     <string name="miracast_menu_search">Ricerca</string>
