--- a/Italian/main/Email.apk/res/values-it/strings.xml
+++ b/Italian/main/Email.apk/res/values-it/strings.xml
@@ -145,6 +145,7 @@
     <string name="account_setup_names_user_name_empty_error">Questo campo non può essere vuoto.</string>
     <string name="account_setup_names_user_name_label">Il tuo nome (visualizzato nei messaggi in uscita)</string>
     <string name="account_setup_need_password_verification">Il tuo account è stato aperto tramite autenticazione password, autenticazione richiesta</string>
+    <string name="account_setup_not_disturb_title">Non disturbare</string>
     <string name="account_setup_options_background_attachments_label">Scarica allegati automaticamente quando connesso a Wi-Fi</string>
     <string name="account_setup_options_headline">Opzioni account</string>
     <string name="account_setup_options_mail_check_frequency_10min">Ogni 10 minuti</string>
@@ -279,6 +280,7 @@
     <string name="change_account_type">Modifica tipo di account</string>
     <string name="change_folders_selection_dialog_title">Cambia cartelle</string>
     <string name="change_sync_settings">Modifica impostazioni di sincronizzazione</string>
+    <string name="changepw_dialog_tips">Inserire di nuovo la password di \"%s\"</string>
     <string name="chat_item_msg_people_unit">persone</string>
     <string name="chat_item_msg_user_etc">…</string>
     <string name="chat_item_msg_user_saying">dice:</string>
@@ -301,12 +303,12 @@
     <string name="compose_sent">Inviato correttamente</string>
     <string name="confirm">Conferma</string>
     <string name="confirm_delete">Sei sicuro di voler elimianre questa email?</string>
+    <string name="confirm_delete_conversation_title">Elimina</string>
     <string name="confirm_discard_text">Eliminare questo messaggio?</string>
     <string name="confirm_response">Invio risposta…</string>
     <string name="confirm_save_message_no">No</string>
     <string name="confirm_save_message_title">Salvare come bozza?</string>
     <string name="confirm_save_message_yes">Sì</string>
-    <string name="confirm_send_message">Inviare il messaggio?</string>
     <string name="confirm_send_message_with_no_body">Nessun testo presente nel corpo del messaggio.</string>
     <string name="confirm_send_message_with_no_subject">"Nessun testo presente nell'oggetto del messaggio."</string>
     <string name="confirm_send_title">Inviare il messaggio?</string>
@@ -375,15 +377,21 @@
     <string name="discard">Elimina</string>
     <string name="discard_drafts">Elimina bozze</string>
     <string name="dismiss_tip_hover_text">Eliminazione</string>
-    <string name="done">Return</string>
+    <string name="done">Fatto</string>
     <string name="done_action">Fine</string>
+    <string name="donot_disturb_endtime_title">A</string>
+    <string name="donot_disturb_starttime_title">Da</string>
+    <string name="donot_disturb_summary">"Il tuo telefonon non riceverà e non notificherà nuove email nell'orario impostato"</string>
+    <string name="donot_disturb_title"Non disturbare di notte</string>
     <string name="downlaod_cancel_confirm_download">Annulla download</string>
     <string name="downlaod_cancel_continue_download">Annulla</string>
     <string name="downlaod_confirm_download">Download</string>
     <string name="downlaod_nonWifi_confirm_message">Il download consumerà traffico, confermare</string>
+    <string name="downlaod_nonWifi_confirm_title">Scaricare questo allegato?</string>
     <string name="download_again">Scarica di nuovo</string>
     <string name="download_before_sharing">" non è ancora stato scaricato, scaricalo prima di condividerlo!"</string>
     <string name="download_before_view">Non ancora scaricato, prima esegui il download</string>
+    <string name="download_cancel_confirm_message">Il download verrà interrotto</string>
     <string name="download_cancel_confirm_title">Annullare il download?</string>
     <string name="download_complete_not_cancel">Download completato, annullamento fallito!</string>
     <string name="download_confirm_message">"Per aprire questo file devi scaricare l'allegato da 180K %1$s"</string>
@@ -487,6 +495,7 @@
     <string name="intent_exchange_action">com.android.email.EXCHANGE_INTENT</string>
     <string name="intent_exchange_package">com.android.exchange</string>
     <string name="invalid_recipient">Indirizzo non valido.</string>
+    <string name="invalid_recipient_title">Destinatario non valido</string>
     <string name="kilobytes">%s KB</string>
     <string name="load_from_remote">Continua a cercare sul server</string>
     <string name="load_more">Carica altro</string>
