--- a/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
+++ b/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
@@ -343,6 +343,7 @@ Contatta il tuo provider di servizi per maggiori informazioni."</string>
     <string name="tc_sms_report_get_sms_timeout">Impossibile ricevere dati sul formato SMS: tempo scaduto</string>
     <string name="tc_sms_report_get_sms_successs">Formato SMS utilizzo dati aggiornato</string>
     <string name="tc_sms_report_get_default">Non avrai costi per gli SMS di richiesta saldo dal tuo operatore.</string>
+    <string name="tc_sms_report_toast_text">Recupero informazioni…</string>
     <string name="privacy_declare_dialog_title">Termini e Condizioni</string>
     <string name="privacy_declare_dialog_message">Utilizzando questo servizio accetti i &lt;a href=http://max.oupeng.com/eula.html> Termini e Condizioni&lt;/a> di Opera."</string>
     <string name="sc_allow_network_dialog_tiltle">Impossibile utilizzare la funzione di risparmio dati</string>
@@ -352,4 +353,33 @@ Contatta il tuo provider di servizi per maggiori informazioni."</string>
     <string name="privacy_prompt_traffic_purchase_message">"Il tuo numero di telefono ed i dettagli dell'operatore verranno inviati ai server Xiaomi er avere maggiori informazioni sulle opzioni dei dati di acquisto."</string>
     <string name="privacy_prompt_tc_sms_report_message">"Il tuo numero di telefono ed i dettagli dell'operatore verranno inviati ai server Xiaomi per aggiornare le informazioni sul tuo utilizzo dei dati."</string>
     <string name="privacy_prompt_purchase_history_message">"Il tuo numero di telefono ed i dettagli dell'operatore verranno inviati ai server Xiaomi per analizzare la tua cronologia di acquisto."</string>
+    <string name="title_limit_traffic_per_day">Limite utilizzo dati giornaliero</string>
+    <string name="pref_title_traffic_limit_number">Dimensione</string>
+    <string name="pref_title_over_traffic_limit_warning">Al sueperamento soglia</string>
+    <string name="reach_daily_limit_value_title">Limite dati giornaliero raggiunto</string>
+    <string name="reach_daily_limit_value_body">"Riduci l'utilizzo dei dati 3G."</string>
+    <string name="daily_limit_network_available_body">"Tocca per vedere le statistiche sull'utilizzo dei dati."</string>
+    <string name="daily_limit_over_message">Hai raggiunto il limite giornaliero del consumo dati.</string>
+    <string name="three_percent_total_pkg">%s (3%% dei tuoi dati 3G mensili)</string>
+    <string name="five_percent_total_pkg">%s (5%% dei tuoi dati 3G mensili)</string>
+    <string name="ten_percent_total_pkg">%s (10%% dei tuoi dati 3G mensili)</string>
+    <string name="international_roaming_setting">Roaming internationazionale</string>
+    <string name="pref_allow_connect_network_title">Roaming dati internazionale</string>
+    <string name="pref_allow_connect_network_summary">Collegati al servizio dati anche durante il roaming internazionale</string>
+    <string name="pref_allow_connect_network_whitelist_title">Consenti eccezioni</string>
+    <string name="pref_allow_connect_network_whitelist_summary">Consentire alle app nella lista delle eccezioni di collegarsi al servizio dati anche durante il roaming internazionale?</string>
+    <string name="pref_whitelist_setting">Eccezioni</string>
+    <string name="alter_dialog_message">La connesione dati durante il rroaming internazionale può comportare costi elevati con il tuo operatore. onsentire alle app nella lista delle eccezioni di collegarsi al servizio dati anche durante il roaming internazionale?</string>
+    <string name="add_white_list">Aggiungi</string>
+    <string name="international_roaming_whitelist_count">%d applicazioni possono collegarsi al servizio dati anche durante il roaming internazionale</string>
+    <string name="firewall_rule_group_title_roaming">Roaming internazionale</string>
+    <string name="dialog_roaming_title">Roaming internazionale</string>
+    <string name="dialog_roaming_message">Le applicazioni nella lista delle eccezioni possono collegarsi al servizio dati anche durante il roaming internazionale. Aggiungere questa applicazione alla lista delle eccezioni?</string>
+    <string name="add_to_whitelist_button">gestisci eccezioni</string>
+    <string name="roaming_not_start_title">Roaming internazionale</string>
+    <string name="roaming_not_start_body">e applicazioni nella lista delle eccezioni possono collegarsi al servizio dati anche durante il roaming internazionale.</string>
+    <string name="roaming_start_title">Roaming internazionale</string>
+    <string name="roaming_start_body">Consenti alle app nella lista delle eccezioni di collegarsi al servizio dati anche durante il roaming internazionale.</string>
+    <string name="dialog_app_roaming_title">il roamig internazionale non è attivato per %1$s</string>
+    <string name="dialog_app_roaming_message">Durante il roaming internazionale, solo le applicazioni cha hai aggiunto alla lista delle eccezioni possono utilizzare i servizi dati. %1$s non è stata aggiunta alla lista delle eccezioni. Vedere la lista delle eccezioni?"</string>
 </resources>
