--- a/Italian/main/ThemeManager.apk/res/values-it/strings.xml
+++ b/Italian/main/ThemeManager.apk/res/values-it/strings.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="maml_component_customization_title">Impostazioni</string>
-    <string name="default_name">Predefinito</string>
-    <string name="resource_select">Seleziona</string>
     <string name="resource_app_name">Ricerca Browser</string>
     <string name="resource_delete">Elimina</string>
     <string name="resource_price_free">Gratis</string>
@@ -47,6 +44,7 @@
     <string name="resource_delta_update_total">%1$d aggiornamenti patch. Salvati in totale %2$s</string>
     <string name="resource_apply">Applica</string>
     <string name="resource_update">Aggiorna</string>
+    <string name="resource_select">Seleziona</string>
     <string name="resource_buy">Acquista</string>
     <string name="resource_importing">Importazione</string>
     <string name="resource_ringtone_playing_error">Errore di riproduzione</string>
@@ -78,6 +76,7 @@
     <string name="resource_no_result">Nessun risultato</string>
     <string name="resource_failed_to_load_list">Impossibile caricare la lista</string>
     <string name="resource_search_list_empty">Non è stato trovato nulla</string>
+    <string name="resource_no_network_text">impossibile connettersi alla rete</string>
     <string name="resource_list_title">Ultime</string>
     <string name="resource_get_auth_checking">Ricerca autorizzazioni…</string>
     <string name="resource_get_auth_retrieving">Recupero autorizzazioni…</string>
@@ -85,6 +84,7 @@
     <string name="resource_get_auth_exceed_max_limit_title">Limite autorizzazioni superato</string>
     <string name="resource_get_auth_exceed_max_limit_tips">Il tema non può essere eseguito su questo dispositivo, hai raggiunto il limite massimo di 10 installazioni, si prega di usare il tema su un altro dispositivo</string>
     <string name="resource_server_out_of_service">Server attualmente non disponibile, si prega di riprovare più tardi.</string>
+    <string name="resource_get_auth_has_been_undercarriaged">Questo tema non è più disponibile.</string>
     <string name="resource_server_alert_dialog_title">Il servizio è momentaneamente non disponibile</string>
     <string name="resource_purchase_getting_order">Recupero informazioni ordine…</string>
     <string name="resource_purchase_waiting_payment">In attesa delle informazioni di pagamento…</string>
@@ -104,6 +104,7 @@
     <string name="deleting">Eliminazione…</string>
     <string name="resource_title_select_ringtone">Seleziona suoneria</string>
     <string name="resource_tip_select_ringtone">Nessuna suoneria selezionata</string>
+    <string name="resource_select_ringtone_confirm">Selezionare questo suono?</string>
     <string name="loading_resource_detail_info">Caricamento delle informazioni…</string>
     <string name="loading_resource_detail_fail">Impossibile caricare la risorsa!</string>
     <string name="resource_expand_full_text">Espandi</string>
@@ -179,6 +180,13 @@
     <string name="resource_user_know">OK</string>
     <string name="resource_hint">Avviso</string>
     <string name="resource_ringtone_volume_mute">La tua suoneria è silenziata</string>
+    <string name="resource_has_been_downloaded">Hai già scaricato questo tema.</string>
+    <string name="resource_no_match_app">Non è stata trovata nessuna applicazione per eseguire questa azione</string>
+    <string name="resource_title_rank">Classifiche</string>
+    <string name="resource_title_category">Categorie</string>
+    <string name="resource_title_subject">In evidenza</string>
+    <string name="resource_title_local">Locali</string>
+    <string name="resource_title_hot_subject">popolari</string>
     <string name="app_name">Temi</string>
     <string name="theme_changing_dialog_title">Installazione nuovo tema, attendere prego…</string>
     <string name="theme_changed_message">Applicato con successo!</string>
@@ -188,6 +196,7 @@
     <string name="backup_theme_dialog_message">Backup tema corrente in %1$s</string>
     <string name="backup_theme_progress_message">Backup in corso, attendere prego…</string>
     <string name="backup_theme_success_message">Backup tema eseguito correttamente</string>
+    <string name="backup_theme_fail_trial_rights_message">Impossibile salvare i temi in prova</string>
     <string name="backup_theme_name">Mio backup</string>
     <string name="theme_description_title_default">Predefinito</string>
     <string name="theme_description_title_customized">Modificato</string>
@@ -232,6 +241,7 @@
     <string name="theme_yes">Si</string>
     <string name="theme_no">No</string>
     <string name="title_component">Modifica temi</string>
+    <string name="theme_multiple_button_title_customize">Personalizza</string>
     <string name="title_system_resource">Risorse di sistema</string>
     <string name="long_ringtone_resource">Durata (>5sec)</string>
     <string name="short_ringtone_resource">Breve (&lt;5sec)</string>
@@ -244,10 +254,17 @@
     <string name="wallpaper_decoded_error">Decodifica fallita</string>
     <string name="close">Chiudi</string>
     <string name="download_success">Scaricato correttamente</string>
-    <string name="basic_info">Informazioni base</string>
     <string name="account_info">Il mio account</string>
+    <string name="account_name_not_login">Accedi</string>
+    <string name="account_id_not_login">Tocca per accedere</string>
+    <string name="favorite_list">Preferiti</string>
+    <string name="favorite_list_format">Preferito %1$s</string>
     <string name="purchased_list">Temi acquistati</string>
+    <string name="purchased_list_format">%1$s acquistati</string>
     <string name="payment_info">Mi Credit</string>
+    <string name="my_gifts">Regali</string>
+    <string name="my_gifts_purchased">Acquistati</string>
+    <string name="my_gifts_received">Ricevuti</string>
     <string name="theme_batch_has_update_text">%1$d temi hanno aggiornamenti disponibili</string>
     <string name="theme_batch_updating_text">%1$d temi sono stati aggiornati</string>
     <string name="theme_batch_update_all">Aggiorna tutto</string>
@@ -271,4 +288,46 @@
     <string name="theme_user_agreement_remind_never">Non chiedere più</string>
     <string name="theme_user_agreement_remind_again">Mostra Condizioni di utilizzo</string>
     <string name="theme_user_agreement_remind_summary">"Mostra l'avviso sulle Condizioni di utilizzo ogni volta. Questa impostazione avrà effetto dopo il riavvio del dispositivo."</string>
+    <string name="theme_favorite_add_success">Tema aggiunto ai preferiti</string>
+    <string name="theme_favorite_add_fail">Impossibile aggiungere il tema ai preferiti</string>
+    <string name="theme_favorite_delete_success">Tema eliminato dai preferiti</string>
+    <string name="theme_favorite_delete_fail">Impossibile togliere il tema dai preferiti</string>
+    <string name="theme_favorite_list_empty">Non hai aggiunto nessun tema ai preferiti.</string>
+    <string name="theme_favorite_delete">Elimina dai preferiti</string>
+    <string name="theme_favorite_waiting">Solo un secondo…</string>
+    <string name="theme_empty_redirect">Torna al Theme Store</string>
+    <string name="theme_purchased_non_local">Online</string>
+    <string name="theme_purchased_list_empty">Non hai acquistato alcun tema.</string>
+    <string name="gift_count_format">%1$s+</string>
+    <string name="gift_present">Regala</string>
+    <string name="gift_transfer">Trasferisci</string>
+    <string name="gift_use">Utilizza</string>
+    <string name="gift_share">Condividi</string>
+    <string name="gift_presented">Inviato</string>
+    <string name="gift_owned">Locale</string>
+    <string name="gift_used">Inviato</string>
+    <string name="gift_anonymous">Anonimo</string>
+    <string name="gift_purchased_endnote">A: %1$s</string>
+    <string name="gift_received_endnote">Da: %1$s (ricevuto %2$s)</string>
+    <string name="gift_purchase_success_dlg_title">Regalo acquistato</string>
+    <string name="gift_purchase_success_dlg_content">Hai acquistato %1$s come regalo. Per inviarlo vai nella pagina del tuo account Temi.</string>
+    <string name="gift_present_success_dlg_title">regalo inviato</string>
+    <string name="gift_present_success_dlg_content">Verrà inviato un SMS a questa persona quando il tema verrà consegnato.</string>
+    <string name="gift_present_success_no_sms_dlg_content">La cronologia dei regali è nella pagina del tuo account Temi.</string>
+    <string name="gift_present_fail_dlg_title">non è stato possibile inviare il regalo</string>
+    <string name="gift_present_fail_dlg_content">"non è stato impossibile inviare questo regalo. "</string>
+    <string name="gift_present_dlg_input_hint">Mi Account ID/Telefono</string>
+    <string name="gift_present_dlg_no_fee">"Non avrai addebiti dal tuo operatore per l'invio dei regali"</string>
+    <string name="gift_present_dlg_anonymous">regalo anonimo</string>
+    <string name="gift_present_dlg_share">Crea codice e condividi regalo</string>
+    <string name="gift_present_dlg_present_max_limit">Il tema non può essere regalato più di %$1s volte.</string>
+    <string name="gift_use_confirmation_dlg_title">Inviare questo regalo?</string>
+    <string name="gift_use_fail_dlg_title">Qualcosa è andato storto</string>
+    <string name="gift_unbind_fail_dlg_title">Impossibile creare codice</string>
+    <string name="gift_operation_fail_dlg_retry">Prova di nuovo</string>
+    <string name="gift_operation_fail_dlg_abandon">Annulla</string>
+    <string name="gift_operation_waiting">Solo un secondo…</string>
+    <string name="gift_purchased_list_empty_with_received_list_empty">Nessun regalo.</string>
+    <string name="gift_purchased_list_empty">Non hai inviato alcun regalo. :(</string>
+    <string name="gift_received_list_empty">Non hai ricevuto alcun regalo.</string>
 </resources>
