Fixed parser error

--- a/Italian/device/mocha/Browser.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/Browser.apk/res/values-it/strings.xml
@@ -6,7 +6,7 @@
     <string name="cancel">Annulla</string>
     <string name="ok">OK</string>
     <string name="save">OK</string>
-    <string name="done">Finito</string
+    <string name="done">Finito</string>
     <string name="search">Cerca</string>
     <string name="select">Seleziona</string>
     <string name="delete">Elimina</string>
